# blur_detector

./: .gitignore  CMakeLists.txt  README.md  blur_detector.cpp  blur_detector.h  blur_detector.py  blur_detector.sln  blur_detector.vcxproj  blur_detector.vcxproj.filters  main.cpp
